ECA-920: fixing ejbca ws cli
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@6135 37aeb1de-b14b-0410-9a0e-82b28170d228